--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ $('#twitter').attr({
    'href': "https://twitter.com/mrjopino",
    'class': "entypo-twitter"
  });
+ // awepush.js
+_awepush = ".logo__amposh-your_project, .core--sexy-content, .btn_sexy_cdn--project";
 </script>
 </body>
 </html>
