awepush.js > implement

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <meta name="viewport" content="width=device-width"/>
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
-    <meta name="author" content="@mrjopino"/>
+    <meta name="author" content="@jofpin"/>
     <meta name="description" content="Amposh. amazing posh style cdn."/>
 
     <link rel="stylesheet" type="text/css" href="assets/amposh.css">
-    <script src="assets/awepush-amposh.min.js"></script>
+    <script src="assets/awepush.min.js"></script>
    <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><!--[if (gte IE 6)&(lte IE 8)]>
     <![endif]-->
@@ -51,12 +51,12 @@
 
 <script>
 $('#twitter').attr({
-   'title': "José Pino",
-   'href': "https://twitter.com/mrjopino",
+   'title': "Jose Pino",
+   'href': "https://twitter.com/jofpin",
    'class': "entypo-twitter"
  });
- // awepush.js
-_awepush = ".logo__amposh-your_project, .core--sexy-content, .btn_sexy_cdn--project";
+ // awepush.js > implement
+Awepush(".logo__amposh-your_project, .core--sexy-content, .btn_sexy_cdn--project", 4);
 </script>
 </body>
 </html>
