--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="description" content="Amposh. amazing posh style cdn."/>
 
     <link rel="stylesheet" type="text/css" href="assets/amposh.css">
+    
+    <script src="assets/jquery.min.js"></script>
+    <!-- awepush -->
     <script src="assets/awepush.min.js"></script>
    <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]--><!--[if (gte IE 6)&(lte IE 8)]>
